fix:my course alignment

--- a/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
+++ b/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
@@ -323,12 +323,13 @@
   // width: 100%;
   // height: 100%;
   width: 90px;
+  margin-top: 15%;
   // padding: 21px;
   // margin: auto;
 }
 .errorboxx{
   padding: 5px !important;
-  margin-top:4%;
+  margin-top:5%;
 }
 
 .m-l-1 {
@@ -1142,7 +1143,7 @@ mat-icon {
 }
 
 .hr-tag{
-  bottom: 16px;
+    top: 5px;
     position: relative;
 }
 .dropdownicon{
